--- a/index.html
+++ b/index.html
@@ -1,237 +1,254 @@
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
-import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js";
-import { getDatabase, ref, set, get, update, onValue, remove } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pixel Art Creator</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    #canvas-container {
+      position: relative;
+    }
+    #paint-canvas {
+      border: 1px solid black;
+      cursor: crosshair;
+    }
+    .color {
+      width: 30px;
+      height: 30px;
+      margin: 2px;
+      display: inline-block;
+      cursor: pointer;
+    }
+    #palette {
+      display: flex;
+      margin-bottom: 10px;
+    }
+    #controls {
+      margin-top: 10px;
+    }
+    #auth-container {
+      margin-bottom: 20px;
+    }
+    #login-signup input {
+      margin: 5px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Pixel Art Creator</h1>
 
-// Firebase configuration
-const firebaseConfig = {
-  apiKey: "AIzaSyC-wJdotEQqjlpCMrmBXaa7VCxTnG_0ksw",
-  authDomain: "eeeeeeee-5fcd8.firebaseapp.com",
-  databaseURL: "https://eeeeeeee-5fcd8-default-rtdb.firebaseio.com",
-  projectId: "eeeeeeee-5fcd8",
-  storageBucket: "eeeeeeee-5fcd8.firebasestorage.app",
-  messagingSenderId: "120108097948",
-  appId: "1:120108097948:web:ff67fe909b919397a3a859",
-  measurementId: "G-3K7B56SWMH"
-};
+  <!-- Login / Signup -->
+  <div id="auth-container">
+    <div id="login-signup">
+      <input type="email" id="email" placeholder="Email" />
+      <input type="password" id="password" placeholder="Password" />
+      <button id="login-button">Login</button>
+      <button id="signup-button">Sign Up</button>
+      <button id="logout-button" style="display: none;">Logout</button>
+    </div>
+  </div>
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const auth = getAuth();
-const db = getDatabase();
+  <!-- Canvas and Room Management -->
+  <div id="canvas-container">
+    <canvas id="paint-canvas"></canvas>
+    <div id="palette"></div>
+    <div id="controls">
+      <input type="text" id="room-name" placeholder="Room Name" />
+      <input type="password" id="room-password" placeholder="Room Password" />
+      <button id="create-room">Create Room</button>
+      <button id="join-room">Join Room</button>
+      <button id="reset-canvas">Reset Canvas</button>
+      <button id="undo">Undo</button>
+    </div>
+  </div>
 
-// DOM Elements
-const canvasContainer = document.getElementById("canvas-container");
-const paintCanvas = document.getElementById("paint-canvas");
-const ctx = paintCanvas.getContext("2d");
-const palette = document.getElementById("palette");
-const roomNameInput = document.getElementById("room-name");
-const roomPasswordInput = document.getElementById("room-password");
-const createRoomButton = document.getElementById("create-room");
-const joinRoomButton = document.getElementById("join-room");
-const resetCanvasButton = document.getElementById("reset-canvas");
-const undoButton = document.getElementById("undo");
-const emailInput = document.getElementById("email");
-const passwordInput = document.getElementById("password");
-const loginButton = document.getElementById("login-button");
-const signupButton = document.getElementById("signup-button");
-const logoutButton = document.getElementById("logout-button");
+  <!-- Firebase and Application Script -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js";
+    import { getDatabase, ref, set, get, update, onValue } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
 
-let currentColor = "black";
-let brushSize = 5;
-let currentRoom = null;
-let isHost = false;
+    // Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyC-wJdotEQqjlpCMrmBXaa7VCxTnG_0ksw",
+      authDomain: "eeeeeeee-5fcd8.firebaseapp.com",
+      databaseURL: "https://eeeeeeee-5fcd8-default-rtdb.firebaseio.com",
+      projectId: "eeeeeeee-5fcd8",
+      storageBucket: "eeeeeeee-5fcd8.appspot.com",
+      messagingSenderId: "120108097948",
+      appId: "1:120108097948:web:ff67fe909b919397a3a859",
+      measurementId: "G-3K7B56SWMH"
+    };
 
-// Set up color palette
-const colors = ["red", "green", "blue", "yellow", "black", "white"];
-colors.forEach(color => {
-  const colorDiv = document.createElement("div");
-  colorDiv.classList.add("color");
-  colorDiv.style.backgroundColor = color;
-  colorDiv.dataset.color = color;
-  palette.appendChild(colorDiv);
-});
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth();
+    const db = getDatabase();
 
-// Canvas drawing functionality
-let painting = false;
-paintCanvas.width = 500;
-paintCanvas.height = 400;
+    // DOM Elements
+    const canvasContainer = document.getElementById("canvas-container");
+    const paintCanvas = document.getElementById("paint-canvas");
+    const ctx = paintCanvas.getContext("2d");
+    const palette = document.getElementById("palette");
+    const roomNameInput = document.getElementById("room-name");
+    const roomPasswordInput = document.getElementById("room-password");
+    const createRoomButton = document.getElementById("create-room");
+    const joinRoomButton = document.getElementById("join-room");
+    const resetCanvasButton = document.getElementById("reset-canvas");
+    const undoButton = document.getElementById("undo");
+    const emailInput = document.getElementById("email");
+    const passwordInput = document.getElementById("password");
+    const loginButton = document.getElementById("login-button");
+    const signupButton = document.getElementById("signup-button");
+    const logoutButton = document.getElementById("logout-button");
 
-paintCanvas.addEventListener("mousedown", (e) => {
-  painting = true;
-  draw(e);
-});
+    let currentColor = "black";
+    let brushSize = 5;
+    let currentRoom = null;
 
-paintCanvas.addEventListener("mousemove", (e) => {
-  if (painting) {
-    draw(e);
-  }
-});
+    // Set up color palette
+    const colors = ["red", "green", "blue", "yellow", "black", "white"];
+    colors.forEach(color => {
+      const colorDiv = document.createElement("div");
+      colorDiv.classList.add("color");
+      colorDiv.style.backgroundColor = color;
+      colorDiv.dataset.color = color;
+      palette.appendChild(colorDiv);
+    });
 
-paintCanvas.addEventListener("mouseup", () => {
-  painting = false;
-});
+    // Canvas setup
+    paintCanvas.width = 500;
+    paintCanvas.height = 400;
+    let painting = false;
 
-// Function to draw on canvas and sync with Firebase
-function draw(e) {
-  const rect = paintCanvas.getBoundingClientRect();
-  const x = e.clientX - rect.left;
-  const y = e.clientY - rect.top;
+    paintCanvas.addEventListener("mousedown", (e) => {
+      painting = true;
+      draw(e);
+    });
 
-  ctx.fillStyle = currentColor;
-  ctx.fillRect(x, y, brushSize, brushSize);
+    paintCanvas.addEventListener("mousemove", (e) => {
+      if (painting) draw(e);
+    });
 
-  // Save the drawing action to Firebase
-  const drawAction = { x, y, color: currentColor, brushSize };
-  if (currentRoom) {
-    const roomRef = ref(db, `rooms/${currentRoom}/boardState`);
-    update(roomRef, { newAction: drawAction });
-  }
-}
+    paintCanvas.addEventListener("mouseup", () => painting = false);
 
-// Listen to drawing actions from Firebase (collaborative updates)
-function listenToRoomUpdates(roomName) {
-  const roomRef = ref(db, `rooms/${roomName}/boardState`);
-  onValue(roomRef, (snapshot) => {
-    if (snapshot.exists()) {
-      const data = snapshot.val();
-      // Loop through actions and redraw on canvas
-      data.forEach(action => {
-        ctx.fillStyle = action.color;
-        ctx.fillRect(action.x, action.y, action.brushSize, action.brushSize);
+    function draw(e) {
+      const rect = paintCanvas.getBoundingClientRect();
+      const x = e.clientX - rect.left;
+      const y = e.clientY - rect.top;
+
+      ctx.fillStyle = currentColor;
+      ctx.fillRect(x, y, brushSize, brushSize);
+
+      if (currentRoom) {
+        const roomRef = ref(db, `rooms/${currentRoom}/boardState`);
+        update(roomRef, { [Date.now()]: { x, y, color: currentColor, size: brushSize } });
+      }
+    }
+
+    // Listen for updates from Firebase
+    function listenToRoomUpdates(roomName) {
+      const roomRef = ref(db, `rooms/${roomName}/boardState`);
+      onValue(roomRef, (snapshot) => {
+        if (snapshot.exists()) {
+          const data = snapshot.val();
+          for (let action of Object.values(data)) {
+            ctx.fillStyle = action.color;
+            ctx.fillRect(action.x, action.y, action.size, action.size);
+          }
+        }
       });
     }
-  });
-}
 
-// Room Management: Create and Join Rooms
-createRoomButton.addEventListener("click", () => {
-  const roomName = roomNameInput.value;
-  const roomPassword = roomPasswordInput.value;
+    // Room management
+    createRoomButton.addEventListener("click", () => {
+      const roomName = roomNameInput.value;
+      const roomPassword = roomPasswordInput.value;
 
-  if (roomName && roomPassword) {
-    const roomRef = ref(db, `rooms/${roomName}`);
-    get(roomRef).then((snapshot) => {
-      if (!snapshot.exists()) {
-        // Create new room with an empty boardState
-        set(roomRef, {
-          password: roomPassword,
-          users: [auth.currentUser ? auth.currentUser.email : "Guest"],
-          boardState: []
-        }).then(() => {
-          currentRoom = roomName;
-          isHost = true;
-          listenToRoomUpdates(roomName);  // Start listening for updates in this room
-        }).catch(error => {
-          console.error("Error creating room:", error);
+      if (roomName && roomPassword) {
+        const roomRef = ref(db, `rooms/${roomName}`);
+        get(roomRef).then((snapshot) => {
+          if (!snapshot.exists()) {
+            set(roomRef, { password: roomPassword, boardState: {} });
+            currentRoom = roomName;
+            listenToRoomUpdates(roomName);
+          } else {
+            alert("Room already exists!");
+          }
         });
       }
     });
-  }
-});
 
-joinRoomButton.addEventListener("click", () => {
-  const roomName = roomNameInput.value;
-  const roomPassword = roomPasswordInput.value;
+    joinRoomButton.addEventListener("click", () => {
+      const roomName = roomNameInput.value;
+      const roomPassword = roomPasswordInput.value;
 
-  if (roomName && roomPassword) {
-    const roomRef = ref(db, `rooms/${roomName}`);
-    get(roomRef).then((snapshot) => {
-      if (snapshot.exists()) {
-        const roomData = snapshot.val();
-        if (roomData.password === roomPassword) {
-          update(roomRef, {
-            users: [...roomData.users, auth.currentUser ? auth.currentUser.email : "Guest"]
-          }).then(() => {
-            currentRoom = roomName;
-            isHost = false;
-            listenToRoomUpdates(roomName);  // Start listening for updates in this room
-          }).catch(error => {
-            console.error("Error joining room:", error);
-          });
-        } else {
-          console.error("Incorrect password.");
-        }
-      } else {
-        console.error("Room not found.");
+      if (roomName && roomPassword) {
+        const roomRef = ref(db, `rooms/${roomName}`);
+        get(roomRef).then((snapshot) => {
+          if (snapshot.exists()) {
+            const roomData = snapshot.val();
+            if (roomData.password === roomPassword) {
+              currentRoom = roomName;
+              listenToRoomUpdates(roomName);
+            } else {
+              alert("Incorrect password!");
+            }
+          } else {
+            alert("Room not found!");
+          }
+        });
       }
     });
-  }
-});
 
-// Reset Canvas
-resetCanvasButton.addEventListener("click", () => {
-  ctx.clearRect(0, 0, paintCanvas.width, paintCanvas.height);
-
-  // Clear the boardState in Firebase as well
-  if (currentRoom) {
-    const roomRef = ref(db, `rooms/${currentRoom}/boardState`);
-    set(roomRef, []);  // Clear the board state in Firebase
-  }
-});
-
-// Undo Button (simple state history)
-undoButton.addEventListener("click", () => {
-  // We can implement undo by storing previous states in an array and re-drawing the previous state
-  // or by storing snapshots of the canvas at each action.
-});
-
-// Color Selection
-palette.addEventListener("click", (e) => {
-  if (e.target.classList.contains("color")) {
-    currentColor = e.target.dataset.color;
-  }
-});
-
-// Firebase Authentication (Login/Signup)
-loginButton.addEventListener("click", () => {
-  const email = emailInput.value;
-  const password = passwordInput.value;
-  signInWithEmailAndPassword(auth, email, password)
-    .then((userCredential) => {
-      console.log("Logged in:", userCredential.user);
-      toggleAuthUI();
-    })
-    .catch((error) => {
-      console.error("Error logging in:", error.message);
+    resetCanvasButton.addEventListener("click", () => {
+      ctx.clearRect(0, 0, paintCanvas.width, paintCanvas.height);
+      if (currentRoom) {
+        const roomRef = ref(db, `rooms/${currentRoom}/boardState`);
+        set(roomRef, {});
+      }
     });
-});
 
-signupButton.addEventListener("click", () => {
-  const email = emailInput.value;
-  const password = passwordInput.value;
-  createUserWithEmailAndPassword(auth, email, password)
-    .then((userCredential) => {
-      console.log("Signed up:", userCredential.user);
-      toggleAuthUI();
-    })
-    .catch((error) => {
-      console.error("Error signing up:", error.message);
+    palette.addEventListener("click", (e) => {
+      if (e.target.classList.contains("color")) {
+        currentColor = e.target.dataset.color;
+      }
     });
-});
 
-logoutButton.addEventListener("click", () => {
-  signOut(auth)
-    .then(() => {
-      console.log("Logged out");
-      toggleAuthUI();
-    })
-    .catch((error) => {
-      console.error("Error logging out:", error.message);
+    // Authentication
+    loginButton.addEventListener("click", () => {
+      signInWithEmailAndPassword(auth, emailInput.value, passwordInput.value)
+        .then(() => toggleAuthUI())
+        .catch((err) => alert(err.message));
     });
-});
 
-function toggleAuthUI() {
-  const user = auth.currentUser;
-  if (user) {
-    document.getElementById("login-signup").style.display = "none";
-    document.getElementById("logout-button").style.display = "inline";
-  } else {
-    document.getElementById("login-signup").style.display = "inline";
-    document.getElementById("logout-button").style.display = "none";
-  }
-}
+    signupButton.addEventListener("click", () => {
+      createUserWithEmailAndPassword(auth, emailInput.value, passwordInput.value)
+        .then(() => toggleAuthUI())
+        .catch((err) => alert(err.message));
+    });
 
-// Listen for auth state changes
-onAuthStateChanged(auth, (user) => {
-  toggleAuthUI();
-});
+    logoutButton.addEventListener("click", () => {
+      signOut(auth).then(() => toggleAuthUI());
+    });
+
+    function toggleAuthUI() {
+      if (auth.currentUser) {
+        logoutButton.style.display = "block";
+        document.getElementById("login-signup").style.display = "none";
+      } else {
+        logoutButton.style.display = "none";
+        document.getElementById("login-signup").style.display = "block";
+      }
+    }
+
+    onAuthStateChanged(auth, () => toggleAuthUI());
+  </script>
+</body>
+</html>
